# activation-based-pruning

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_REPORT.md  LITERATURE_FIDELITY_REPORT.md  MODULE_DOCUMENTATION.md  README.md  README_LOCAL.md  add_inference_exp.py  demo_viz_narrative.py  experiments.ipynb  experiments_cat_dog.ipynb  experiments_cat_dog_github.ipynb  experiments_cifar10.ipynb  experiments_cifar100.ipynb  experiments_cifar100_github.ipynb  experiments_custom_method_registration_minimal RESNET_18.ipynb  experiments_custom_method_registration_minimal densenet121.ipynb  experiments_custom_method_registration_minimal mobilenet_v2.ipynb  experiments_custom_method_registration_minimal_vgg16.ipynb  experiments_pretrained_workflow.ipynb  github experiments workflow.ipynb  github experiments workflow_cifar10.ipynb  integrated_workflow_readme.md  pyproject.toml
.tmp.driveupload/: 491  495  499  503  507  511  515  519  523  527  531  535  539  543  547  551  555  559  569  573  577  581  585  589  593  597  601  605  609  613  617  621  623  627  631  635  639  643  647  651  (+21 more)
Legacy/: README.md  README_LOCAL.md  generalized_pruning_v4_optimized.ipynb  generalized_pruning_v5_sota.ipynb  generalized_pruning_v6_final.ipynb  generalized_pruning_v6_final_extracted_tmp.py  generalized_pruning_v7_dual_framework.ipynb  generalized_pruning_v7_dual_framework_extracted_tmp.py  integrated_workflow_readme.md  prunning_v3b__iadd_seeding_and_test_acc_vf.ipynb  update_resnet_exp.py  v7_extracted.py
docs/: CROSS_BACKEND_REDFLAGS_DENSENET121_2026-03-24.md  RELEASE_NOTES_v0.88.0.md  (+28 more)
(+61 files in other folders)
