[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ReduCNN"
version = "0.88.0"
authors = [
  { name="Research Team" },
]
description = "Dual-framework (PyTorch & Keras) activation-based structural pruning."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
    "seaborn",
    "tqdm",
    # Frameworks are optional to avoid forcing both
    "thop",
    # "torch", "torchvision",
    # "tensorflow"
]

[project.optional-dependencies]
dev = ["pytest", "black", "isort"]

[tool.setuptools.packages.find]
where = ["src"]
